[NNO-12869] - Списковый виджет с расширенными строками